# redis

./: .gitignore  README.md  ben.sh
pythis/: .gitignore  README.md  ben.sh  main.py  requirements.txt
rudis/: Cargo.toml  README.md
rudis/src/: connection.rs  frame.rs  parse.rs  server.rs
rudis/src/cmd/: cmd.rs  get.rs  mod.rs  set.rs
